<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_vii_portrait">

    <Button
        android:id="@+id/button9"
        android:layout_width="78dp"
        android:layout_height="69dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/convert_z"
        app:layout_constraintBottom_toTopOf="@+id/activity7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Input"
        android:layout_width="238dp"
        android:layout_height="71dp"
        android:layout_marginTop="36dp"
        android:hint="@string/Activity6_EditText"
        android:inputType="number|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="245dp"
        android:layout_height="53dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="239dp"
        android:layout_height="91dp"
        android:layout_marginTop="148dp"
        android:hint="@string/Activity6_TextView"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input" />

    <TextView
        android:id="@+id/activity7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity7"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>