<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_viii_port"
    tools:context=".Activity8">

    <Button
        android:id="@+id/convert"
        android:layout_width="78dp"
        android:layout_height="69dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/convert_z"
        app:layout_constraintBottom_toTopOf="@+id/activity8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Input1"
        android:layout_width="238dp"
        android:layout_height="71dp"
        android:layout_marginTop="30dp"
        android:hint="@string/Activity6_EditText"
        android:inputType="number|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="236dp"
        android:layout_height="51dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input1" />

    <TextView
        android:id="@+id/output"
        android:layout_width="239dp"
        android:layout_height="91dp"
        android:layout_marginTop="100dp"
        android:hint="@string/Activity6_TextView"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner7" />

    <TextView
        android:id="@+id/activity8"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:text="@string/Activity8"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>